Update tune list with Rhythm tunes.

--- a/appendices/tune-list.tex
+++ b/appendices/tune-list.tex
@@ -127,6 +127,50 @@ no means exhaustive.)
 \end{compactitem}
 \nocite{blakey:bohemia,gordon:power,navarro:fabulous}
 
+
+\section*{Chapter 5}
+
+\vspace{-1em}
+\tuneitem{``Anthropology'' -- Charlie Parker and Dizzy Gillespie}
+\begin{compactitem}
+  \item Dizzy Gillespie, \emph{Dizzy Gillespie} (recorded 1946, released 1966)
+  \item Barry Harris, \emph{Newer than New} (1961)
+  \item[$\star$] Charlie Parker, \emph{Summit Meeting at Birdland} (recorded
+    1951, released 1977)
+\end{compactitem}
+\nocite{parker:summit,gillespie:vintage,harris:newer}
+
+\tuneitem{``C.T.A.'' -- Jimmy Heath}
+\begin{compactitem}
+  \item[$\star$] Miles Davis, \emph{Miles Davis, Vol.~2} (1953)
+  \item Lee Morgan, \emph{Candy} (1957)
+  \item Art Taylor, \emph{Taylor's Wailers} (1957)
+\end{compactitem}
+\nocite{davis:vol2,morgan:candy,taylor:wailers}
+
+\tuneitem{``Moose the Mooche'' -- Charlie Parker}
+\begin{compactitem}
+  \item Barry Harris, \emph{At the Jazz Workshop} (1960)
+  \item Hank Jones, \emph{'Bop Redux} (1977)
+  \item[$\star$] Charlie Parker, \emph{Charlie Parker, Vol.~1} (1946)
+\end{compactitem}
+\nocite{parker:vol1,harris:workshop,jones:bopredux}
+
+\tuneitem{``Serpent's Tooth'' -- Miles Davis}
+\begin{compactitem}
+  \item[$\star$] Miles Davis, \emph{Collector's Items} (1956)
+  \item Jeff Hamilton Trio, \emph{Symbiosis} (2009)
+\end{compactitem}
+\nocite{davis:collectors,hamilton:symbiosis}
+
+\tuneitem{``Wail'' -- Bud Powell}
+\begin{compactitem}
+  \item[$\star$] Bud Powell, \emph{The Amazing Bud Powell, Vol.~1} (1955)
+  \item George Shearing, \emph{I Hear a Rhapsody: Live at the Blue Note} (1992)
+\end{compactitem}
+\nocite{powell:amazing1,shearing:rhapsody}
+
+
 \clearpage
 
 
