--- a/discog.bib
+++ b/discog.bib
@@ -95,6 +95,17 @@
   type        = {\abbrev{CD}}
 }
 
+@music{davis:collectors,
+  author      = {Davis, Miles},
+  title       = {Collector's Items},
+  userd       = {Prestige \abbrev{PRLP} 7044,},
+  origdate    = {1956},
+  series      = {Reissued, Fantasy},
+  number      = {0712},
+  year        = {1990},
+  type        = {\abbrev{CD}}
+}
+
 @music{davis:cookin,
   author      = {Davis, Miles},
   title       = {Cookin' with the Miles Davis Quintet},
@@ -114,6 +125,17 @@
   series      = {Reissued, Columbia/Legacy},
   number      = {\abbrev{CJ} 40579},
   year        = {1992},
+  type        = {\abbrev{CD}}
+}
+
+@music{davis:vol2,
+  author      = {Davis, Miles},
+  title       = {Miles Davis, Vol.~2},
+  userd       = {Blue Note \abbrev{BLP} 5022,},
+  origdate    = {1953},
+  series      = {Reissued, Blue Note},
+  number      = {\abbrev{BNZ} 240},
+  year        = {1985},
   type        = {\abbrev{CD}}
 }
 
@@ -203,6 +225,18 @@
   type        = {\abbrev{CD}}
 }
 
+@music{gillespie:vintage,
+  author      = {Gillespie, Dizzy},
+  title       = {Dizzy Gillespie},
+  userd       = {RCA Victor \abbrev{LPV} 530,},
+  origdate    = {1966},
+  series      = {Available on \textit{Dizzy Gillespie: The Complete RCA
+                Victor Recordings}. Bluebird},
+  number      = {07863 66528-2},
+  year        = {1995},
+  type        = {\abbrev{CD}}
+}
+
 @music{gordon:power,
   author      = {Gordon, Dexter},
   title       = {More Power!},
@@ -210,7 +244,7 @@
   origdate    = {1969},
   series      = {Reissued, Prestige/Original Jazz Classics},
   number      = {\abbrev{OJCCD} 815-2},
-  year        = {19894},
+  year        = {1994},
   type        = {\abbrev{CD}}
 }
 
@@ -222,6 +256,37 @@
   series      = {Reissued, Original Jazz Classics},
   number      = {\abbrev{OJCCD} 235-2},
   year        = {1995},
+  type        = {\abbrev{CD}}
+}
+
+@music{hamilton:symbiosis,
+  author      = {Hamilton, Jeff \mkbibbrackets{Jeff Hamilton Trio}},
+  title       = {Symbiosis},
+  series      = {Capri},
+  number      = {74097},
+  year        = {2009},
+  type        = {\abbrev{CD}}
+}
+
+@music{harris:newer,
+  author      = {Harris, Barry},
+  title       = {Newer than New},
+  userd       = {Riverside \abbrev{RLP} 413,},
+  origdate    = {1961},
+  series      = {Reissued, Riverside},
+  number      = {\abbrev{VICJ} 60691},
+  year        = {2000},
+  type        = {\abbrev{CD}}
+}
+
+@music{harris:workshop,
+  author      = {Harris, Barry},
+  title       = {At the Jazz Workshop},
+  userd       = {Riverside \abbrev{RLP} 326,},
+  origdate    = {1960},
+  series      = {Reissued, Original Jazz Classics},
+  number      = {\abbrev{OJCCD} 208-2},
+  year        = {1992},
   type        = {\abbrev{CD}}
 }
 
@@ -254,6 +319,17 @@
                 1958}. Gambit},
   number      = {69264},
   year        = {2007},
+  type        = {\abbrev{CD}}
+}
+
+@music{jones:bopredux,
+  author      = {Jones, Hank},
+  title       = {'Bop Redux},
+  userd       = {Muse \abbrev{MR} 5123,},
+  origdate    = {1977},
+  series      = {Reissued, Pony Canyon Records},
+  number      = {30059},
+  year        = {2002},
   type        = {\abbrev{CD}}
 }
 
@@ -321,6 +397,17 @@
   type        = {\abbrev{CD}}
 }
 
+@music{morgan:candy,
+  author      = {Morgan, Lee},
+  title       = {Candy},
+  userd       = {Blue Note \abbrev{BLP} 1590,},
+  origdate    = {1957},
+  series      = {Reissued, Blue Note},
+  number      = {\abbrev{BNZ} 67},
+  year        = {1987},
+  type        = {\abbrev{CD}}
+}
+
 @music{morgan:cornbread,
   author      = {Morgan, Lee},
   title       = {Cornbread},
@@ -352,6 +439,30 @@
                 Best of the Verve Years}. Verve},
   number      = {314 527 815-2},
   year        = {1995},
+  type        = {\abbrev{CD}},
+  sortttile   = {Magnificent Charlie Parker}
+}
+
+@music{parker:summit,
+  author      = {Parker, Charlie},
+  title       = {Summit Meeting at Birdland},
+  userd       = {Columbia \abbrev{JC} 34831,},
+  origdate    = {1977},
+  series      = {Reissued, TriStar},
+  number      = {80914},
+  year        = {1994},
+  type        = {\abbrev{CD}}
+}
+
+@music{parker:vol1,
+  author      = {Parker, Charlie},
+  title       = {Charlie Parker, Vol.~1},
+  userd       = {Dial \abbrev{LP} 201,},
+  origdate    = {1946},
+  series      = {Available on \textit{Charlie Parker: The Complete Savoy and
+                Dial Master Takes}. Savoy},
+  number      = {\abbrev{SVY} 17149},
+  year        = {2002},
   type        = {\abbrev{CD}}
 }
 
@@ -385,6 +496,17 @@
   series      = {Reissued, Verve/PolyGram},
   number      = {5214422},
   year        = {1997},
+  type        = {\abbrev{CD}}
+}
+
+@music{powell:amazing1,
+  author      = {Powell, Bud},
+  title       = {The Amazing Bud Powell, Vol.~1},
+  userd       = {Blue Note \abbrev{BLP} 1503,},
+  origdate    = {1955},
+  series      = {Reissued, Blue Note},
+  number      = {\abbrev{CDP} 7815032},
+  year        = {1989},
   type        = {\abbrev{CD}}
 }
 
@@ -422,6 +544,15 @@
   type        = {\abbrev{CD}}
 }
 
+@music{shearing:rhapsody,
+  author      = {Shearing, George},
+  title       = {I Hear a Rhapsody: Live at the Blue Note},
+  series      = {Telarc},
+  number      = {\abbrev{CD} 83310},
+  year        = {1992},
+  type        = {\abbrev{CD}}
+}
+
 @music{shorter:evil,
   author      = {Shorter, Wayne},
   title       = {Speak No Evil},
@@ -430,6 +561,17 @@
   series      = {Reissued, Blue Note},
   number      = {\abbrev{CDP} 7465092},
   year        = {1987},
+  type        = {\abbrev{CD}}
+}
+
+@music{taylor:wailers,
+  author      = {Taylor, Art},
+  title       = {Taylor's Wailers},
+  userd       = {Prestige 7117,},
+  origdate    = {1957},
+  series      = {Reissued, Original Jazz Classics},
+  number      = {\abbrev{OJCCD} 094-2},
+  year        = {1992},
   type        = {\abbrev{CD}}
 }
 
