--- a/diss.tex
+++ b/diss.tex
@@ -11,7 +11,7 @@
 \input{footnotes/ch5-notes}
 
 % control what we’re compiling
-\includeonly{chapters/ch5}
+\includeonly{chapters/appendices,chapters/back}
 
 \begin{document}
 
