--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -256,7 +256,7 @@
 \fntext{pvl-3}{%
   The inverse is needed for \slideS because it was defined as a transformation
   from a major seventh chord to the minor seventh whose root is a half-step
-  higher. Keeping the \slideS transformation intact in this circumstance would
+  higher. A cycle that uses the non-inverse \slideS transformation would
   require inverses on both the \textsc{3rd} and \textsc{7th} transformations.}
 
 %%% Local Variables: %%%
