Clarify footnote about Santa, shuffle graphics.

--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -110,20 +110,18 @@
   of his that ``Giant Steps'' is chromatically coherent, while locally diatonic.
   As such, it represents an example of his ``hypothetical'' Type 4 coherence,
   ``in which areas of diatony occur only in local isolation and in which some
-  other (presumably post-tonal) coherence might be in effect.''
-  \headlesscite{samarotto:2003}.}
+  other (presumably post-tonal) coherence might be in effect''
+  \parentext{\headlesscite{samarotto:2003}}.}
 
 \fntext{maj3-4a}{%
   These changes are from \cite[30]{levine:piano}. ``Infant Eyes'' appears on
   Shorter's album \emph{Speak No Evil} (1964).\nocite{shorter:evil}}
 
 \fntext{maj3-4b}{%
-  % xxx need this Jaffe page number
-  Authors disagree on whether ``Giant Steps'' is in the key of B or \Eflat:
-  David Demsey hears \Eflat\ (\headlesscite[171--72]{demsey:1991}), while Andy
-  Jaffe hears B \parentext{\headlesscite[]{jaffe:1996}}. Given the organizing influence
-  of the major-third cycle, I am not sure the question is so important; the
-  tune uses tonal progressions, but may not be \emph{in} a key.}
+  Logical arguments could be made for both B and \Eflat as the prevailing key
+  of ``Giant Steps.'' Given the organizing influence of the major-third cycle,
+  I am not sure the question is so important; the tune uses tonal
+  progressions, but may not be \emph{in} a key.}
 
 \fntext{maj3-5}{%
   Exactly how Coltrane devised this substitution set is difficult to say:
@@ -194,11 +192,11 @@
   Santa omits the fifth of dominant seventh chords, as we have been doing
   here. The reasons, though, are different: the stated reason is to keep the
   cardinalities of the chords the same, but he does not mention why he chooses
-  not to use major seventh chords and complete dominant sevenths, for example.
-  Santa notes later that including the fifth involves one of the three missing
-  notes from the nonatonic collection, which is acceptable because ``the
-  fourth voice is not essential to the voice leading of the
-  cycle'' \parentext{\cite[15]{santa:2003}}.}
+  not to use major seventh chords (rather than triads) and complete dominant
+  sevenths, for example. Santa notes later that including the fifth involves
+  one of the three missing notes from the nonatonic collection, which is
+  acceptable because ``the fourth voice is not essential to the voice leading
+  of the cycle'' \parentext{\cite[15]{santa:2003}}.}
 
 \fntext{maj3-14}{%
   The major-third figure represents a kind of cross-section of the
