Make more connections with Tymoczko.
(Plus, more minor edits.)

--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -1,5 +1,10 @@
 %% Chapter 3 notes
 
+\fntext{mts-a}{%
+  That is, there is no strong voice-leading from \flat{}VII$^7$ to \I in the
+  same way as there is in the tritone substitution, \flat{}II$^7$--\I. We will
+  return to the voice leading of minor third substitutions below.}
+
 \fntext{mts-1}{%
   Turning Figure \ref{mts:m3-torus} into a torus involves gluing the
   top and bottom edges together and the left and right edges together; the
@@ -70,7 +75,7 @@
   measure voice-leading distance, and whether we consider major-minor sevenths
   in the usual way, as four-note chords, or in the way we have been doing so
   here, as ordered triples of root, third, and seventh. In Jack Douthett's
-  Four-Cube trio, for example, \h{Bb7} and \h{C7} are maximally far apart---4
+  Four-Cube Trio, for example, \h{Bb7} and \h{C7} are maximally far apart---4
   semitones; see \cite[157--58]{cohn:2012}.}
 
 \fntext{mts-10}{%
