Minor edits for biblio/discography.

--- a/discog.bib
+++ b/discog.bib
@@ -1,4 +1,3 @@
-
 @music{ammons:stitt,
   author      = {Ammons, Gene and Stitt, Sonny},
   title       = {Boss Tenors},
@@ -512,7 +511,7 @@
 
 @music{quintet:massey,
   author      = {{The Quintet}},
-  sortauthor  = {Quintet},
+  sortkey     = {Quintet},
   nameaddon   = {Charlie Parker, Dizzy Gillespie, Bud Powell, Charlie Mingus,
                 Max Roach},
   title       = {Jazz at Massey Hall},
