--- a/diss.bib
+++ b/diss.bib
@@ -184,7 +184,7 @@ Theory} }
 
 @article{capuzzo:2006,
   author      = {Capuzzo, Guy},
-  title       = {{Pat Martino's} {The Nature of the Guitar}},
+  title       = {Pat Martino's \textit{The Nature of the Guitar}},
   subtitle    = {An Intersection of Jazz Theory and {Neo-Riemannian} Theory},
   journal     = {Music Theory Online},
   volume      = {12},
@@ -304,7 +304,7 @@ Theory} }
 @article{cook:1989,
   author      = {Cook, Nicholas},
   title       = {Schenker's Theory of Music as Ethics},
-  journal     = {The Journal of Musicology},
+  journal     = {Journal of Musicology},
   volume      = {7},
   number      = {4},
   pages       = {415--39},
@@ -385,7 +385,7 @@ Theory} }
                 Analytical Studies},
   title       = {{An Analysis of Polyrhythm in Selected Improvised Jazz
                 Solos}},
-  address     = {Rochester, NY},
+  address     = {Rochester},
   publisher   = {University of Rochester Press},
   pages       = {103--35},
   year        = {1995}
@@ -419,7 +419,7 @@ Theory} }
 
 @article{gollin:1998,
   author      = {Gollin, Edward},
-  title       = {Some Aspects of Three-Dimensional \mkbibquote{Tonnetze}},
+  title       = {Some Aspects of Three-Dimensional \textit{Tonnetze}},
   journal     = {Journal of Music Theory},
   volume      = {42},
   number      = {2},
@@ -434,6 +434,7 @@ Theory} }
   volume      = {39},
   number      = {2},
   month       = jul,
+  pages       = {63--95},
   year        = {2001}
 }
 
@@ -571,7 +572,7 @@ Theory} }
               # "9780199935321.001.0001/oxfordhb-9780199935321-e-003"
 }
 
-@inproceedings{hook:heptachords,
+@incollection{hook:heptachords,
   author      = {Hook, Julian},
   editor      = {Agon, Carlos and Amiot, Emmanuel and Andreatta, Moreno and
                 Assayag, Gérard and Bresson, Jean and Mandereau, John},
