Minor text/graphics edits to chapter 4.

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -64,7 +64,8 @@
   for example, to recall the ``half--whole diminished scale'' than it is to
   remember the ``auxiliary diminished blues scale'' (named, incidentally, for
   the fact that it shares \flat\sd3, \nat\sd3, and \flat\sd7 with the blues
-  scale).}
+  scale). The ``Lydian dominant'' scale is an exception: though Russell does
+  not use the term himself, it is clearly derived from his work.}
 
 \fntext{lcc-12}{%
   Exactly what Russell means by ``seventh'' is unclear; he likely means the
@@ -170,7 +171,7 @@
 
 \fntext{cst-5}{%
   Indeed, this lack of focus on common-tone connections in the pedagogical
-  literature is the main impetus for Love's ``Model of Common Tone
+  literature is the main impetus for Love's ``Model of Common-Tone
   Connections.''\nocite{love:2009}}
 
 \fntext{cst-6}{%
@@ -219,6 +220,7 @@
   4 semitones are called ``thirds.''}
 
 \fntext{cst-13}{%
+  % This footnote doesn't appear in the text any more
   We might consider using $-7$ rather than $1$ in the second place here, to
   reflect the intuition that the move from the blues scale to the parent
   Lydian is an ingoing motion. This seems to be a valid judgment, but affects
@@ -393,6 +395,10 @@
 \fntext{csa-17}{%
   The only time it is not occurs in Stitt's first chorus ($3$A\tsub{1},
   mm.~67--68), where he plays a sustained D\nat\ through all four chords.}
+
+\fntext{csa-17a}{%
+  This passage also illustrates the property of signature transformations that
+  $f_7$ is always equivalent to $T_{11}$; see \cite[142--44]{hook:2008}.}
 
 \fntext{csa-18}{%
   The dominant, \h{D7}, is not in the 2\flat\ collection, since it is not
