--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -231,6 +231,7 @@
   suspicion.}
 
 \fntext{et-4a}{%
+  % xxx a nearly identical footnote now appears in chapter 4...reconsider this one
   That $f_7 = T_{11}$ is one of the properties of signature transformations;
   see \cite[142--44]{hook:2008}.}
 
