More edits for chapter 4, per JH.
This should be the last of them for now.

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -46,6 +46,14 @@
   probably point to another reason: the second chord does not contain the
   dissonant minor ninth between F\nat\ and E, the third of the chord.}
 
+\fntext{lcc-8a}{%
+  Russell does recognize that \sharp\sd4 in the harmonic series is not pure.
+  Describing this potential problem, he notes that in relation to a C
+  fundamental, ``the eleventh overtone, represented as F\sharp\ has a
+  frequency of 551 cents: 1/100th of a semitone closer to F\sharp\ than F\nat.
+  In fact, the overtone series fails to list the F\nat\ tone even when carried
+  out to twenty harmonics'' (\lcc 3).}
+
 \fntext{lcc-9}{%
   My own suspicion is that Russell's work is too new to be considered
   historically, but not new enough to be taken seriously as modern
@@ -169,6 +177,18 @@
   and were devised partly as a means of moving beyond the standard chord-scale
   approach we are examining here.}
 
+\fntext{cst-4a}{%
+  Russell's blues scale contains more pitches than the blues scale as
+  described by some others; Mark Levine gives the C blues scale as
+  C--\Eflat--F--F\sharp--G--\Bflat--C \parentext{\headlesscite[219]{levine:1995}}.
+  Joe Mulholland and Tom Hojnacki give Russell's version (with \sd2
+  and \nat\sd7) with the caption ``a more complete blues scale,'' but note
+  that ``there is no single blues scale. Rather, there is a large variety of
+  scales that share common blues characteristics''
+  \parentext{\headlesscite[135]{berklee:harmony}}. In practice, melodies
+  derived from the blues scale focus heavily on \flat\sd3 and \flat\sd7, and
+  are usually unambiguous, as we will see in the analyses below.}
+
 \fntext{cst-5}{%
   Indeed, this lack of focus on common-tone connections in the pedagogical
   literature is the main impetus for Love's ``Model of Common-Tone
@@ -196,6 +216,13 @@
 \fntext{cst-8}{%
   In fact, the blues scale is probably more common than some of Russell's
   vertical scales.}
+
+\fntext{cst-8a}{%
+  This construction shares some similarity with Julian Hook's ``spelled
+  heptachords,'' in which the white-key diatonic collection is inflected by
+  any number of accidentals. Some, but not all, elements of the \gis here
+  could be recast as spelled heptachords, since the diminished scales require
+  a letter doubling. \cite{hook:heptachords}.}
 
 \fntext{cst-9}{%
   \cite{hook:2008}. In this section we will not apply the full power of Hook's
@@ -264,7 +291,7 @@
   ``anti-Lewinian'' \parentext{\headlesscite{tymoczko:2008}}. For more on this
   tension, see Rachel Wells Hall's review of \emph{GMIT} (\emph{Journal of the
     American Musicological Society} 62 no.~1 [Spring 2009]:
-  205-22);\nocite{hall:2009} \cite[especially 185--86]{hook:2007gmit}; and
+  205--22);\nocite{hall:2009} \cite[especially 185--86]{hook:2007gmit}; and
   \cite[19--20]{rings:2011}.}
 
 \fntext{cst-19}{%
