Minor style changes to front matter.

--- a/diss.tex
+++ b/diss.tex
@@ -11,7 +11,8 @@
 \input{footnotes/ch5-notes}
 
 % control what we’re compiling
-\includeonly{chapters/ch4}
+\includeonly{chapters/front}
+
 
 \begin{document}
 
