Add CV to back matter.

--- a/diss.tex
+++ b/diss.tex
@@ -11,8 +11,7 @@
 \input{footnotes/ch5-notes}
 
 % control what we’re compiling
-\includeonly{chapters/front}
-
+\includeonly{chapters/back}
 
 \begin{document}
 
