Chapter 5 edits per JH.

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -481,6 +481,7 @@
   \ref{maj3:four-cube-trio} describes the same voice-leading space.}
 
 \fntext{csa-26}{%
+  \label{fn:cesh}
   Jerry Coker calls this kind of line \abbrev{CESH}, which is short for ``contrapuntal
   elaboration of static harmony'' \parentext{\citetitle[61--67]{coker:elements}}.}
 
