--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -188,7 +188,10 @@
   categorizations: normally dominant chords have the parent Lydian tonic a
   whole-step below their roots (the parent Lydian tonic of \h{G7} is F), but
   for \alt chords the Lydian tonic is a half-step above (the parent of
-  \h{G7alt} is \Aflat).}
+  \h{G7alt} is \Aflat). Here, the chord is effectively \h{Ab7alt} (given the
+  E\nat, A\nat, and B\nat\ in the melody), which Russell would analyze as part of
+  the A Lydian diminished scale (A--B--C\nat--D\sharp--E--F\sharp--G\sharp, or
+  enharmonically starting on \Aflat: \Aflat--A\nat--B\nat--C--D--E\nat--G\flat).}
 
 \fntext{lj-6}{%
   During the solos, there there are consistently only two chords in this bar,
