Minor edits affecting front matter.

--- a/appendices/transcriptions.tex
+++ b/appendices/transcriptions.tex
@@ -6,7 +6,7 @@
 Transcription is a notoriously difficult problem in jazz. As Steve Larson
 (among others) has noted, any transcription is also, in some sense, an
 analysis.\footcite[2]{larson:2009} In the transcriptions that follow, I have
-(in general) only notated the solo line, focusing primarily on the pitches and
+(in general) notated only the solo line, focusing primarily on the pitches and
 rhythms. This means that many of the so-called ``secondary parameters'' are
 absent from the notation: dynamics, intonation, phrasing, issues of timing,
 etc. To that end, the transcriptions should be seen as companions to the
