Minor edits to chapter 1 (typos, fig. placement).

--- a/footnotes/ch1-notes.tex
+++ b/footnotes/ch1-notes.tex
@@ -61,7 +61,7 @@
 \fntext{pja-4a}{%
   In places where I refer to a “tune” generically, I have provided at
   least two references to relatively straight-ahead recorded examples in the
-  appendix.}
+  Appendix A.}
 
 \fntext{pja-4}{%
   The Thelonious Monk Institute of Jazz maintains a web page on the history of
