Minor edits to ch. 2.

--- a/footnotes/ch2-notes.tex
+++ b/footnotes/ch2-notes.tex
@@ -176,7 +176,7 @@
 
 \fntext{tfe-1}{%
   The extensions used for the dominant chord in a minor \tf is quite flexible:
-  Aebersold's \emph{II--\V--I Progression} gives the quality as \h{7s9},
+  Aebersold's \emph{II--V\tsup{7}--I Progression} gives the quality as \h{7s9},
   but Mark Levine usually gives the chord symbol simply as ``alt.'' Levine
   includes the minor \tf in the category of ``melodic minor scale harmony,'' and
   ``alt.'' is short for the ``altered scale'' (the seventh mode of melodic
