Minor edits to ch. 3.

--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -134,8 +134,8 @@
   Nicolas Slonimsky's \emph{Thesaurus of Scales and Melodic Patterns}---as
   well as the music of Thelonious Monk, Dizzy Gillespie, and Tadd Dameron,
   among others. One source that is nearly always cited is the tune ``Have You
-  Met Miss Jones?'' (Richard Rodgers/Lorenz Hart), which we analyze in Section
-  \ref{subsec:miss-jones}. For a review of these possible origins, see
+  Met Miss Jones?'' (Richard Rodgers/Lorenz Hart), which is analyzed in Section
+  \ref{subsec:miss-jones} below. For a review of these possible origins, see
   \cite[148--57]{demsey:1991}; and \cite[145--47]{porter:1998}.}
 
 \fntext{maj3-6}{%
