Minor edits to ch. 4.

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -147,8 +147,8 @@
   ``most ingoing'') for matching a scale with a chord; Russell's system of
   substituting other member scales sharing the same Lydian tonic is generally
   not present in the later texts. For jazz musicians the melodic minor scale
-  refers only to its ascending form, which is played in both directions in
-  jazz.}
+  refers only to its ascending form, which is played both ascending and
+  descending in jazz.}
 
 % Chord-scale transformations
 
@@ -204,7 +204,7 @@
 
 \fntext{cst-7}{%
   These names have been chosen to reflect common jazz usage, so scale 3 is the
-  Lydian dominant scale rather than the acoustic scale.}
+  Lydian \flat{}7 scale rather than the acoustic scale.}
 
 \fntext{cst-7a}{%
   Admittedly, Russell himself would likely object to this characterization
@@ -382,7 +382,7 @@
 \fntext{csa-11}{%
   Absent any additional information we will assume Russell's most ingoing
   scale for chords. Since there is no B (flat or natural) in any of the third
-  bars of Figure \ref{csa:kirk-tfo-progs}, we thus assume F Lydian.}
+  bars of Figure \ref{csa:kirk-tfo-progs}, we assume F Lydian.}
 
 \fntext{csa-12}{%
   The kind of metrical shifts discussed here are much simpler than those
