Minor edits to back matter text.

--- a/appendices/transcriptions.tex
+++ b/appendices/transcriptions.tex
@@ -12,10 +12,10 @@ absent from the notation: dynamics, intonation, phrasing, issues of timing,
 etc. To that end, the transcriptions should be seen as companions to the
 source recordings, not replacements for them.
 
-In the transcriptions of the rhythm changes tunes, no chord symbols are given.
+In the transcriptions of the Rhythm tunes, no chord symbols are given.
 One of the principal arguments of Chapter 5 is that the chord symbols are
 somewhat fluid through the course of a performance; I have simply omitted the
-chord symbols rather than assigning one based on the solo line. In the
+chord symbols rather than assigning them based on the solo line. In the
 transcriptions, the notes remain more-or-less uninterpreted (though the
 notation of accidentals is a question of interpretation); examples in the text
 refer to a given passage's harmonic context.
