--- a/appendices/tune-list.tex
+++ b/appendices/tune-list.tex
@@ -6,10 +6,10 @@
   the many different formats and reissues of original sources. I have tried to
   be as clear as possible in the discography, listing both original release
   information and more readily available reissues, when available. Three
-  online sources have been invaluable in compiling this information: The Jazz
-  Discography Project (\url{http://www.jazzdisco.org}; Nobuaki Togashi, Kohji
-  ``Shaolin'' Matsubayashi, and Masayuki Hatta, maintainers); Discogs
-  (\url{http://www.discogs.com}; created by Kevin Lewandowski); and AllMusic
+  online sources have been invaluable in compiling this information: \emph{The Jazz
+  Discography Project} (\url{http://www.jazzdisco.org}; Nobuaki Togashi, Kohji
+  ``Shaolin'' Matsubayashi, and Masayuki Hatta, maintainers); \emph{Discogs}
+  (\url{http://www.discogs.com}; created by Kevin Lewandowski); and \emph{AllMusic}
   (\url{http://www.allmusic.com}; All Media Network).}%
 %
 This appendix provides a list of all of the musical examples used in this
@@ -19,7 +19,7 @@ chosen because they present clear statements of the standard changes analyzed
 in the text. Recordings are listed here only by the artist and album title;
 full details can be found in the discography that follows. In cases where a
 tune has a recording that is considered definitive, it is marked with a star.
-(This list reflects my own preference for pianists and saxophonists, and is by
+(This list reflects my own proclivity towards pianists and saxophonists, and is by
 no means exhaustive.)
 
 \section*{Chapter 1}
