Final edits to ch. 5.

--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -215,7 +215,7 @@
   % xxx find better source for this?
   See, for example, Stephen Cook's review on \emph{AllMusic}, where he notes
   that on ``{}`The Eternal Triangle,' in particular, Stitt and Rollins impress
-  in their roles as tenor titans \ldots\, an embarrassment of solo riches
+  in their roles as tenor titans \ldots\ an embarrassment of solo riches
   comes tumbling out of both these men's horns'' \parentext{\cite{cook:2015}}.}
 
 \fntext{et-2}{%
